# Sine-Simulator-Imgui

./: .gitignore  CMakeLists.txt  README.md
docs/: resizable_panel.md  ui_ux_pro_design.md
scripts/: build_native.sh  build_web.sh  run_webserver.sh
src/: Application.cpp  Application.hpp  Style.hpp  main.cpp
src/core/: CMakeLists.txt  CoreLogic.cpp
src/core/include/: CoreLogic.hpp
src/ui/: CMakeLists.txt  Gui.cpp
src/ui/include/: Animations.hpp  Gui.hpp  Style.hpp  Themes.hpp
web/: shell.html
